--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "dev/app.js",
   "scripts": {
-    "test": "test"
+    "test": "test",
+    "start": "webpack-dev-server"
   },
   "repository": {
     "type": "git",
